# slimroll

./: .gitignore  Cargo.toml  README.md
src/: emojis.rs  env_vars.rs  error.rs  handler.rs  main.rs  reactions.rs  roll.rs
src/emojis/: emoji_value.rs  generate.rs
