[package]
name = "slimroll"
version = "0.1.0"
authors = ["sc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "0.9.0-rc.0"
default-features = false
features = [
	"builder",
	"cache",
	"client",
	"gateway",
	"http",
	"model",
	"utils",
	"rustls_backend"
]

[dependencies]
resvg = "0.11.0"
usvg = "0.11.0"
lazy_static = "1.4.0"
futures = "0.3.5"
image = "0.23.8"
caith = "1.0.0"
env_logger = "0.7.1"
kankyo = "0.3"
base64 = "0.12.3"
png = "0.16.7"
indicatif = "0.15.0"
log = "0.4"
tokio = { version = "0.2", features = ["macros"] }
regex = "1.3.9"
clap = "2.33.3"